--- a/src/app/pages/landing/components/menu-item/menu-item.component.scss
+++ b/src/app/pages/landing/components/menu-item/menu-item.component.scss
@@ -1,27 +1,76 @@
 .menu-item-wrapper {
-  p {
-    width: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 4px 8px;
-    position: relative;
-    text-transform: uppercase;
-    letter-spacing: 5px;
+  $animSpeed: 50ms;
 
-    &.active {
-      font-weight: 600;
+  ul {
+    list-style-type: none;
+    width: 100%;
+  }
 
-      &:after {
-        content: ' ';
+  .nav {
+    text-align: center;
+    width: 100%;
+
+    &__list {
+      display: inline-block;
+
+    }
+
+    &__menu {
+      float: left;
+      text-transform: uppercase;
+      cursor: pointer;
+      position: relative;
+
+      a {
+        padding: 4px 8px;
+        position: relative;
+        text-transform: uppercase;
+        letter-spacing: 5px;
+
+        &:visited {
+          color: black;
+        }
+      }
+
+      .nav__menu-lists {
         position: absolute;
+        height: 100%;
         width: 100%;
-        height: 2px;
-        left: 0;
-        bottom: 0;
-        background: #4B77CB;
-        border-radius: 2px;
+
+        li {
+          display: none;
+          position: relative;
+          padding: .25rem 0;
+          white-space: nowrap;
+
+          &:first-child {
+            padding-top: 1rem;
+          }
+        }
+      }
+
+      &:hover > .nav__menu-lists li {
+        display: block;
+      }
+
+      // Menu 1
+      @for $i from 1 through 5 {
+        &:hover > .nav__menu--1-lists li:nth-child(#{$i}) {
+          opacity: 0;
+          animation: menu1 ease-in-out forwards;
+          animation-duration: $animSpeed;
+          animation-delay: ($animSpeed / 2) * ($i - 1);
+          @keyframes menu1 {
+            from {
+              opacity: 0;
+              transform: translateY(-1rem);
+            }
+            to {
+              opacity: 1;
+              transform: translateY(0);
+            }
+          }
+        }
       }
     }
   }
