--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -4,13 +4,8 @@
       <app-social-media-buttons></app-social-media-buttons>
     </div>
     <div class="landing-page-header">
-      <img src="../../../assets/images/ibp.png" height="48" width="auto" alt="as">
-      <app-menu-item [active]="true" label="Igreja"></app-menu-item>
-      <app-menu-item label="Eventos"></app-menu-item>
-      <app-menu-item label="Fotos"></app-menu-item>
-      <app-menu-item label="Departamentos"></app-menu-item>
-      <app-menu-item label="Contribua"></app-menu-item>
-      <app-menu-item label="Contato"></app-menu-item>
+      <img src="../../../assets/images/ibp.png" height="48" alt="as">
+      <app-menu-item *ngFor="let menu of menus" [active]="true" [data]="menu"></app-menu-item>
     </div>
     <div class="main-content">
       <h1 class="welcome-text">Seja bem-vindo</h1>
