--- a/src/app/pages/common/components/social-media-buttons/social-media-buttons.component.scss
+++ b/src/app/pages/common/components/social-media-buttons/social-media-buttons.component.scss
@@ -3,4 +3,25 @@
   flex-flow: column;
   gap: 1rem;
   align-items: center;
+
+  img {
+    transition: all 0.2s ease-in-out;
+    transform: scale(1) translateX(0);
+
+    &:hover {
+      cursor: pointer;
+
+      &.animatable {
+        transition: all 0.2s ease-in-out;
+
+        &.horizontal {
+          transform: scale(1.2) translateY(-4px);
+        }
+
+        &.vertical {
+          transform: scale(1.2) translateX(4px);
+        }
+      }
+    }
+  }
 }
