--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -19,7 +19,8 @@
       width: 100%;
       padding: 32px 96px 16px 96px;
       display: flex;
-      justify-content: space-around;
+      gap: 3rem;
+      justify-content: center;
     }
 
     .main-content {
