--- a/src/app/pages/landing/components/menu/menu.component.html
+++ b/src/app/pages/landing/components/menu/menu.component.html
@@ -2,8 +2,8 @@
   <div class="nav">
     <ul class="nav-list">
       <li class="nav-menu">
-        <div><ng-content></ng-content></div>
-        <ng-content select="ul"></ng-content>
+        <div><ng-content select="p"></ng-content></div>
+        <ng-content></ng-content>
       </li>
     </ul>
   </div>
