--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="landing-page">
   <app-home></app-home>
-  <app-about></app-about>
+  <worship-times></worship-times>
   <app-footer></app-footer>
 </div>
