--- a/src/app/pages/landing/components/home/home.component.scss
+++ b/src/app/pages/landing/components/home/home.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column;
   width: 100%;
-  height: 90%;
+  height: 90vh;
   position: relative;
 
   .social-media {
@@ -39,7 +39,7 @@
       text-align: center;
       letter-spacing: 5px;
       text-transform: uppercase;
-      color: #505050;
+      color: var(--seconday-text-color);
 
       &:before, &:after {
         position: absolute;
