--- a/src/app/pages/landing/components/menu/menu.component.scss
+++ b/src/app/pages/landing/components/menu/menu.component.scss
@@ -19,6 +19,7 @@
       text-transform: uppercase;
       cursor: pointer;
       position: relative;
+      font-size: 1rem;
 
       &:after {
         content: ' ';
