--- a/src/styles.css
+++ b/src/styles.css
@@ -14,11 +14,15 @@
 html, body {
   height: 100%;
   width: 100%;
-  font-size: 14px;
-}
-
-body {
-  font-size: 100%;
   list-style-type: none;
   font-family: Sora, sans-serif;
+}
+
+:root {
+  --tui-font-text: Sora, sans-serif !important;
+  --primary-text-color: #000;
+  --seconday-text-color: #505050;
+  --accent-text-color: #fff;
+  --tui-primary: #326AFF !important;
+  --tui-primary-hover: #4e7dfa !important;
 }
