--- a/src/app/pages/landing/components/worship-time-section/worship-time-section.component.scss
+++ b/src/app/pages/landing/components/worship-time-section/worship-time-section.component.scss
@@ -55,7 +55,7 @@
     display: flex;
     flex-flow: column;
     gap: 1rem;
-    padding-left: calc(42px + 1rem);
+    padding-left: 4rem;
 
     .time {
       display: flex;
