--- a/src/app/pages/common/components/social-media-buttons/social-media-buttons.component.scss
+++ b/src/app/pages/common/components/social-media-buttons/social-media-buttons.component.scss
@@ -4,7 +4,7 @@
   gap: 1rem;
   align-items: center;
 
-  img {
+  fa-icon {
     transition: all 0.2s ease-in-out;
     transform: scale(1) translateX(0);
 
