--- a/src/app/pages/landing/components/worship-time-section/worship-time-group.component.html
+++ b/src/app/pages/landing/components/worship-time-section/worship-time-group.component.html
@@ -1,15 +1,15 @@
 <div class="worship-time-section-wrapper">
   <div class="header">
     <div class="icon" #iconElem>
-      <fa-icon [icon]="worshipTime?.icon!"></fa-icon>
+      <fa-icon [icon]="worshipTimeGroup?.icon!" size="2x"></fa-icon>
     </div>
     <div class="title">
-      <h1>{{worshipTime?.title}}</h1>
-      <p>{{worshipTime?.subtitle}}</p>
+      <h1>{{worshipTimeGroup?.title}}</h1>
+      <p>{{worshipTimeGroup?.subtitle}}</p>
     </div>
   </div>
-  <div class="times" *ngFor="let period of worshipTime?.periods">
-    <div class="time">
+  <div class="periods" *ngFor="let period of worshipTimeGroup?.periods">
+    <div class="period">
       <p>{{period.title}}</p>
       <div>
         <h1 *ngFor="let time of period.times">{{time}}</h1>
