--- a/src/app/pages/landing/components/worship-time-section/worship-time-group.component.scss
+++ b/src/app/pages/landing/components/worship-time-section/worship-time-group.component.scss
@@ -17,17 +17,6 @@
       align-items: center;
       justify-content: center;
       border-radius: 100%;
-
-      fa-icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        svg {
-          width: auto;
-          height: 1.75rem
-        }
-      }
     }
 
     .title {
@@ -51,13 +40,13 @@
     }
   }
 
-  .times {
+  .periods {
     display: flex;
     flex-flow: column;
     gap: 1rem;
     padding-left: 4rem;
 
-    .time {
+    .period {
       display: flex;
       flex-flow: column;
       padding-top: .5rem;
@@ -80,7 +69,7 @@
           font-size: 1.5rem;
           margin: 0;
 
-          &:nth-child(2) {
+          &:not(&:nth-child(1)) {
             text-align: right;
           }
         }
