--- a/src/app/pages/landing/components/worship-times/worship-times.component.html
+++ b/src/app/pages/landing/components/worship-times/worship-times.component.html
@@ -4,9 +4,14 @@
     <h1 class="header">Venha cultuar conosco</h1>
     <div class="actions">
       <button tuiButton>Agendar</button>
-      <div class="covid-notice" [tuiHint]="covidNoticeTooltip" [tuiHintShowDelay]="0" tuiHintMode="onDark"
-           tuiHintDirection="top-right">
-        <tui-svg class="icon" src="tuiIconCancel"></tui-svg>
+      <div
+        class="covid-notice"
+        [tuiHint]="covidNoticeTooltip"
+        [tuiHintShowDelay]="0"
+        [tuiHintHideDelay]="500"
+        tuiHintMode="onDark"
+        tuiHintDirection="top-right">
+        <fa-icon class="icon" [icon]="faVirus" size="2x"></fa-icon>
         <p>COVID-19</p>
       </div>
 
@@ -23,6 +28,6 @@
     </div>
   </div>
   <div class="right-content">
-    <worship-time-section *ngFor="let time of worshipTimes; let i = index" [worshipTime]="time"></worship-time-section>
+    <worship-time-group *ngFor="let group of worshipTimeGroups; let i = index" [worshipTimeGroup]="group"></worship-time-group>
   </div>
 </div>
