--- a/src/app/pages/landing/components/worship-times/worship-times.component.scss
+++ b/src/app/pages/landing/components/worship-times/worship-times.component.scss
@@ -38,9 +38,8 @@
         align-items: center;
         gap: .5rem;
 
-        tui-svg {
-          color: darkorange;
-          font-size: 1.5rem;
+        .icon {
+          color: var(--accent-green);
         }
 
         p {
