--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,5 +1,6 @@
 <div class="landing-page">
   <app-home></app-home>
   <worship-times></worship-times>
+  <pgm></pgm>
   <app-footer></app-footer>
 </div>
