no schedule button for worships

--- a/src/app/pages/landing/components/worship-times/worship-times.component.html
+++ b/src/app/pages/landing/components/worship-times/worship-times.component.html
@@ -3,7 +3,6 @@
     <p class="top-title">Nossos cultos</p>
     <h1 class="header">Venha cultuar conosco</h1>
     <div class="actions">
-      <button tuiButton>Agendar</button>
       <div
         class="covid-notice"
         [tuiHint]="covidNoticeTooltip"
@@ -12,7 +11,7 @@
         tuiHintMode="onDark"
         tuiHintDirection="top-right">
         <fa-icon class="icon" [icon]="faVirus" size="2x"></fa-icon>
-        <p>COVID-19</p>
+        <p>Recomendações sanitárias (COVID-19)</p>
       </div>
 
       <ng-template #covidNoticeTooltip>
