--- a/src/app/pages/landing/components/worship-times/worship-times.component.html
+++ b/src/app/pages/landing/components/worship-times/worship-times.component.html
@@ -10,8 +10,8 @@
         [tuiHintHideDelay]="500"
         tuiHintMode="onDark"
         tuiHintDirection="top-right">
-        <fa-icon class="icon" [icon]="faVirus" size="2x"></fa-icon>
-        <p>Recomendações sanitárias (COVID-19)</p>
+        <fa-icon class="icon" [icon]="faExclamation" size="2x"></fa-icon>
+        <p>COVID-19</p>
       </div>
 
       <ng-template #covidNoticeTooltip>
