--- a/src/app/pages/landing/components/worship-times/worship-times.component.scss
+++ b/src/app/pages/landing/components/worship-times/worship-times.component.scss
@@ -23,7 +23,6 @@
       margin: .5rem 0 1.5rem 0;
       font-weight: bold;
       font-size: 2.5rem;
-      line-height: 1;
     }
 
     .actions {
@@ -39,13 +38,11 @@
         gap: .5rem;
 
         .icon {
-          color: var(--accent-green)
+          color: var(--accent-orange)
         }
 
         p {
-          //font-weight: 600;
-          color: var(--seconday-text-color);
-          font-weight: 300;
+          font-weight: 600;
           font-size: 1rem;
         }
       }
