--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -2,5 +2,6 @@
   <app-home></app-home>
   <worship-times></worship-times>
   <pgm></pgm>
+  <contribute></contribute>
   <app-footer></app-footer>
 </div>
