--- a/src/app/pages/landing/components/contribute/contribute.component.scss
+++ b/src/app/pages/landing/components/contribute/contribute.component.scss
@@ -31,7 +31,7 @@
     display: flex;
     flex-flow: row;
 
-    div {
+    > div {
       display: flex;
       flex-flow: column;
       align-items: flex-start;
@@ -63,13 +63,23 @@
       }
     }
 
-    div:first-child {
+    > div:first-child {
       width: 30%;
     }
 
-    div:last-child {
+    > div:last-child {
       flex: 1 1 auto;
       align-items: flex-end;
     }
+
+    .social-front-cards {
+      display: grid;
+      grid-template-columns: auto auto;
+      justify-content: flex-end;
+      gap: 2rem;
+      grid-gap: 2rem;
+    }
   }
+
+
 }
