input button group

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -3,5 +3,6 @@
   <worship-times></worship-times>
   <pgm></pgm>
   <contribute></contribute>
+  <newsletter></newsletter>
   <app-footer></app-footer>
 </div>
